--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,6 +1,40 @@
 *{
     font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
+    }
+body{
+    background-color: #eeeeee;
 }
-h1{
-    color: red;
+header{
+    color: #000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+header h1{
+    font-size: 2rem ;
+    padding: 1.5rem;
+    margin: 0;
+}
+.search{
+    border: none;
+    background-color: #bcbcbc5e;
+    color: #000;
+    width: 80%;
+    height: 1.5rem;
+    border-radius: .8rem;
+    margin: 0.5rem;
+    padding: 0.5rem;
+}
+.content {
+    padding: 1rem;
+    height: 100vh;
+}
+.content h1{
+    color: rgb(0, 0, 226);
+    margin: 0;
+    padding: 1rem;
+}
+
+
+
