--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,15 +1,63 @@
 
-.pokemons{
-    list-style: none;
-    padding: 0;
-    margin: 0;
+.pokemons {
     display: grid;
     grid-template-columns: 1fr;
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
 
-@media screen and (min-width: 992px) {
+.pokemon {
+    display: flex;
+    flex-direction: column;
+    margin: .5rem;
+    padding: 1rem;
+    border-radius: 1rem;
+    background-color: #49d0b0;
+}
+
+.pokemon .number {
+    color: #000;
+    opacity: .3;
+    text-align: right;
+    font-size: .625rem;
+}
+
+.pokemon .name {
+    color: #fff;
+    margin-bottom: .25rem;
+}
+
+.pokemon .detail {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.pokemon .detail .types {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.pokemon .detail .types .type {
+    background-color: #61e1ca;
+    color: #fff;
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    font-size: .625rem;
+    border-radius: 1rem;
+}
+
+.pokemon .detail img {
+    max-width: 100%;
+    height: 70px;
+}
+
+@media screen and (min-width: 380px) {
     .pokemons {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
     }
 }
 
@@ -19,64 +67,8 @@
     }
 }
 
-@media screen and (min-width: 390px) {
-    .pokemons{
-        grid-template-columns: 1fr 1fr;
-    }
-}
-
-.pokemon{
-    margin: .5rem;
-    padding: 2rem 1rem;
-    background-color: #49d0b0;
-    color: #fff;
-    border-radius: 1rem;
-    display: flex;
-    flex-direction: column;
-}
-.pokemon .number{
-    color: #000 ;
-    opacity: .3;
-    text-align: right;
-    font-size: .625rem;
-}
-.pokemon .name{
-    color: #fff ;
-    margin-bottom: 0;
-}
-.pokemon .detail .types{
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-.pokemon .detail .types .type{
-    background-color: #61e1ca;
-    color: #fff;
-    padding: .25rem .5rem;
-    font-size: .625rem;
-    margin: .25rem 0;
-    border-radius: 1rem;
-}
-.pokemon .detail{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-.pokemon .detail img{
-    max-width: 100%;
-    border-style: none;
-    height: 80px;
-    align-self: flex-end;
-}
-
 @media screen and (min-width: 992px) {
-    .content{
-        width: 100vw;
-        max-width: 992px;
-        margin: 0 auto;
-        height: auto;
-        background-color: #fff;
-        border-radius: 1rem;
+    .pokemons {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
     }
 }
